Profile Links added

--- a/css/index.css
+++ b/css/index.css
@@ -52,7 +52,6 @@ body {
 		display: block;
 		bottom: 0;
 	}
-
 	#tray {
 		position: relative;
 		display: block;
@@ -104,47 +103,20 @@ body {
 #modal-footer {
 } */
 
-#heading {
+#header {
 	height: 20vh;
 }
 .section {
 	height: 100%;
-	padding: 0px 100px 100px 100px;
+	padding: 0px 100px 10px 100px;
 	margin: 10px 200px 10px 200px;
 }
 .example {
 	height: 80vh;
 }
 
-#brand-div {
-	height: inherit;
-	display: table;
-}
-#brand {
-	display: table-cell;
-	vertical-align: middle;
-}
-#brand-name {
-	font-size: 40px;
-	font-weight: bolder;
-}
-#sub-brand {
-	font-size: 18px;
-	font-weight: bold;
-	text-align: justify;
-}
-#profile-picture {
-	width: 500px;
-	max-width: 100%;
-	height: auto;
-	filter: grayscale(100%);
-	border: 10px solid var(--back3);
-	border-radius: 50%;
-	box-shadow: 0px 0px 20px 10px var(--back3);
-}
-
 @media screen and (max-width: 700px) {
-	#heading {
+	#header {
 		height: 10vh;
 	}
 	.section {
@@ -156,7 +128,78 @@ body {
 		position: relative;
 		height: 100%;
 	}
+}
 
+#brand-div {
+	height: inherit;
+	display: table;
+}
+#brand {
+	display: table-cell;
+	vertical-align: middle;
+}
+#brand-name {
+	font-size: 50px;
+	font-weight: bolder;
+}
+#sub-brand {
+	font-size: 18px;
+	font-weight: bold;
+	text-align: justify;
+}
+#profile-picture {
+	width: 500px;
+	max-width: 100%;
+	height: auto;
+	border-radius: 50%;
+}
+#profile-div {
+	display: inline-block;
+	border-radius: 50%;
+	border: 10px solid var(--back2);
+	box-shadow: 0px 0px 20px 14px var(--back2);
+}
+.picture {
+	transition: filter 0.5s;
+	filter: grayscale(100%);
+}
+.picture:hover {
+	filter: unset;
+}
+
+#platform-logo-section {
+	height: auto;
+
+	/* padding: 0px 100px 0 100px; */
+}
+
+.platform-logo-div {
+	border-radius: 5%;
+	position: relative;
+	text-align: center;
+	justify-content: center;
+	margin: 0 auto;
+	display: -ms-flexbox;
+	display: flex;
+	-ms-flex-wrap: wrap;
+	flex-wrap: wrap;
+}
+
+.platform-logo {
+	/* background-color: var(--background); */
+	width: 40px;
+	max-width: 100%;
+	height: auto;
+	border-radius: 5%;
+	transition: filter 0.5s;
+	filter: grayscale(100%);
+}
+.platform-logo:hover {
+	filter: unset;
+	box-shadow: 0px 0px 10px 2px var(--back2);
+}
+
+@media screen and (max-width: 700px) {
 	#brand-div {
 		height: inherit;
 		display: block;
@@ -179,9 +222,20 @@ body {
 		width: 300px;
 		max-width: 100%;
 		height: auto;
-		filter: grayscale(100%);
-		border: 10px solid var(--back3);
 		border-radius: 50%;
-		box-shadow: 0px 0px 20px 10px var(--back3);
 	}
+
+	.platform-logo {
+		width: 30px;
+	}
+
+	.platform-logo-div {
+		padding: 0px 20px 0px 20px;
+		line-height: 50px;
+	}
+}
+
+.heading {
+	margin-top: 100px;
+	font-size: 40px;
 }
