--- a/css/dark.css
+++ b/css/dark.css
@@ -1,15 +1,15 @@
 @import 'template.css';
 :root {
 	--background: #202020;
-	--font1: #0071bc;
-	--font2: #205493;
+	--font1: #0ac0b7;
+	--font2: #212121;
 	--font3: #f5f7fa;
 	--back1: #212121;
-	--back2: #0071bc;
-	--back3: #212121;
+	--back2: #0ac0b7;
+	--back3: #f5f7fa;
 	--back4: #0071bc;
-	--highlight1: #323a45;
-	--highlight2: #698eb8;
+	--highlight1: #fafafa;
+	--highlight2: #00ddd2;
 	--highlight3: #07307d;
 }
 body {
@@ -62,11 +62,11 @@ body {
 }
 
 .tray-icon {
-	color: var(--font2);
+	color: var(--font1);
 }
 .tray-icon:hover {
-	color: var(--font3);
+	color: var(--highlight1);
 }
 .tray-active {
-	color: var(--font3);
+	color: var(--highlight1);
 }
