--- a/css/dark.css
+++ b/css/dark.css
@@ -10,7 +10,9 @@
 	--back4: #0071bc;
 	--highlight1: #fafafa;
 	--highlight2: #00ddd2;
-	--highlight3: #07307d;
+	--highlight3: #2859b4;
+	--shadow-white: #f5f7fa;
+	--shadow-black: #000000;
 }
 body {
 	background-color: var(--background);
@@ -25,12 +27,15 @@ body {
 
 .highlight1 {
 	color: var(--highlight1);
+	font-weight: bolder;
 }
 .highlight2 {
 	color: var(--highlight2);
+	font-weight: bolder;
 }
 .highlight3 {
 	color: var(--highlight3);
+	font-weight: bolder;
 }
 
 .font1 {
