--- a/css/index.css
+++ b/css/index.css
@@ -237,8 +237,8 @@ body {
 	}
 
 	.platform-logo-div {
-		padding: 0px 20px 0px 20px;
-		line-height: 50px;
+		padding: 0px 20px 20px 20px;
+		line-height: auto;
 	}
 }
 
@@ -340,8 +340,8 @@ body {
 	}
 
 	.project-logo-div {
-		padding: 10px 20px 10px 20px;
-		line-height: 50px;
+		padding: 10px 20px 20px 20px;
+		line-height: auto;
 	}
 }
 
