--- a/css/index.css
+++ b/css/index.css
@@ -385,6 +385,11 @@ body {
 		padding: 0px 20px 0px 20px;
 		line-height: 50px;
 	}
+	.tech-sub-div:hover,
+	:focus {
+		filter: unset;
+		box-shadow: unset;
+	}
 	.language-name {
 		display: none;
 	}
