--- a/css/template.css
+++ b/css/template.css
@@ -2,6 +2,68 @@ html {
 	scroll-behavior: smooth;
 }
 
+.noselect {
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	-webkit-tap-highlight-color: transparent;
+}
+button {
+	width: 160px;
+	height: 40px;
+	cursor: pointer;
+	background: none;
+	border: none;
+}
+
+button:before,
+button:after {
+	content: 'Hover!';
+	letter-spacing: 4px;
+	font-size: 16px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	transform: translateY(-50%);
+	position: absolute;
+	z-index: 1;
+	width: 160px;
+	height: 40px;
+	transition: 500ms;
+}
+
+button:before {
+	overflow: hidden;
+	background: var(--back2);
+	color: var(--shadow-white);
+}
+
+button:after {
+	width: 0px;
+	overflow: hidden;
+	border-bottom: 2px solid var(--back2);
+	border-top: 2px solid var(--back2);
+	transform: translateY(-50%) translateX(80px);
+	color: var(--back2);
+}
+
+button:hover:before {
+	width: 0px;
+	transform: translateY(-50%) translateX(80px);
+}
+
+button:hover:after {
+	width: 160px;
+	transform: translateY(-50%) translateX(0px);
+}
+
+button:focus {
+	outline: none;
+}
+
 .red {
 	border: 2px red solid;
 }
