--- a/css/index.css
+++ b/css/index.css
@@ -361,7 +361,7 @@ body {
 }
 
 #projects-description-section {
-	/* display: none; */
+	display: none;
 }
 
 #project-name {
@@ -390,10 +390,6 @@ body {
 }
 
 @media screen and (max-width: 700px) {
-	/* #projects-description-section {
-		align-items: center;
-		justify-content: center;
-	} */
 	.project-options {
 		padding-top: 10px;
 		line-height: 50px;
