--- a/css/index.css
+++ b/css/index.css
@@ -105,11 +105,11 @@ body {
 }
 
 #header {
-	height: 20vh;
+	height: 27vh;
 }
 .section {
 	padding: 0px 100px 0px 100px;
-	margin: 0px 200px 40px 200px;
+	margin: 0px 10% 40px 10%;
 }
 
 @media screen and (max-width: 700px) {
@@ -123,14 +123,19 @@ body {
 }
 
 #profile-section {
-	display: table;
+	/* display: table; */
 }
 
 #introduction-div {
-	display: table-cell;
+	/* display: table-cell; */
 	vertical-align: middle;
+	display: flex;
+	align-items: center;
 }
 .introduction-sub-div {
+	padding-left: 40px;
+	text-align: justify;
+	text-justify: inter-word;
 }
 .brand-name {
 	font-size: 50px;
@@ -138,11 +143,10 @@ body {
 }
 .sub-brand {
 	font-size: 18px;
-	text-align: justify;
-	text-justify: inter-word;
 }
 #profile-picture-div {
-	display: table-cell;
+	/* display: table-cell; */
+	vertical-align: middle;
 }
 
 .profile-picture-sub-div {
@@ -177,6 +181,7 @@ body {
 		margin-top: 50px;
 	}
 	.introduction-sub-div {
+		padding-left: 0px;
 		text-align: center;
 		vertical-align: unset;
 	}
@@ -201,7 +206,7 @@ body {
 }
 
 #platform-logo-section {
-	padding: 40px 15px 0px 15px;
+	padding: 70px 15px 0px 15px;
 }
 
 .platform-logo-div {
@@ -232,6 +237,9 @@ body {
 }
 
 @media screen and (max-width: 700px) {
+	#platform-logo-section {
+		padding: 40px 15px 0px 15px;
+	}
 	.platform-logo {
 		width: 30px;
 	}
@@ -332,7 +340,7 @@ body {
 	max-width: 100%;
 	height: auto;
 	border-radius: 5%;
-	transition: filter 0.5s, transform 0.5s, border-radius 1s;
+	transition: filter 0.5s, transform 0.5s;
 	filter: grayscale(100%);
 }
 #project-name-data,
@@ -345,7 +353,6 @@ body {
 .project-logo:hover,
 :focus {
 	filter: unset;
-	border-radius: 15%;
 	box-shadow: 0px 0px 10px 2px var(--back2);
 	transform: scale(1.1, 1.1);
 }
@@ -443,6 +450,10 @@ body {
 	.tech-logo-div {
 		padding: 0px 20px 0px 20px;
 		line-height: 50px;
+	}
+
+	.tech-sub-div {
+		filter: unset;
 	}
 	.tech-sub-div:hover,
 	:focus {
