--- a/css/index.css
+++ b/css/index.css
@@ -157,6 +157,8 @@ body {
 }
 #profile-picture {
 	width: 500px;
+	height: 500px;
+	max-height: 100%;
 	max-width: 100%;
 	height: auto;
 	border-radius: 50%;
