--- a/css/dark.css
+++ b/css/dark.css
@@ -12,6 +12,7 @@
 	--highlight1: #fafafa;
 	--highlight2: #949697;
 	--highlight3: #3c86f5;
+	--highlight4: #3778c2;
 	--shadow-white: #f5f7fa;
 	--shadow-black: #000000;
 }
@@ -68,6 +69,10 @@ body {
 }
 .highlight3 {
 	color: var(--highlight3);
+	font-weight: bolder;
+}
+.highlight4 {
+	color: var(--highlight4);
 	font-weight: bolder;
 }
 
